--- a/site/autoregressive/autoregressive/index.html
+++ b/site/autoregressive/autoregressive/index.html
@@ -619,16 +619,14 @@
 </li>
 </ul>
 <p>A fórmula que descreve os modelos autoregressivos é expressa como</p>
-<p>$$
-X_t = \sum_{i=1}^{p} \phi_i X_{t-i} + \varepsilon_t
-$$.</p>
+<div class="arithmatex">\[X_t = \sum_{i=1}^{p} \phi_i X_{t-i} + \varepsilon_t\]</div>
 <p>Onde:</p>
 <ul>
-<li>$ X_t $ é o valor da série temporal no tempo $ t $,</li>
-<li>$ \phi_i $ são os coeficientes autoregressivos,</li>
-<li>$ p $ é a ordem do modelo autoregressivo,</li>
-<li>$ X_{t-i} $ são os valores passados da série temporal</li>
-<li>$ \varepsilon_t $ é o erro ou ruído, considerado como uma variável aleatória com média zero e variância constante</li>
+<li><span class="arithmatex">\(X_t\)</span> é o valor da série temporal no tempo <span class="arithmatex">\(t\)</span>,</li>
+<li><span class="arithmatex">\(\phi_i\)</span> são os coeficientes autoregressivos,</li>
+<li><span class="arithmatex">\(p\)</span> é a ordem do modelo autoregressivo,</li>
+<li><span class="arithmatex">\(X_{t-i}\)</span> são os valores passados da série temporal</li>
+<li><span class="arithmatex">\(\varepsilon_t\)</span> é o erro ou ruído, considerado como uma variável aleatória com média zero e variância constante</li>
 </ul>
 <p><img alt="Comparação de 2 modelos AR" src="../src/AR_comparison.png" /></p>
 <blockquote>
@@ -652,10 +650,13 @@ $$.</p>
 <p>Exemplo de aplicação autoregressiva para previsão da próxima palavra em um contexto. Percebe-se a sequencialidade das previsões, em que apenas uma palavra é predita de cada vez. Além disso, cada palavra depende das palavras previamente geradas, demonstrando o caráter autoregressivo dos modelos de linguagem.</p>
 </blockquote>
 <h2 id="o-que-sao-world-foundation-models-wfms">O que são World Foundation Models (WFMs)?</h2>
-<p>World Foundation Models (WFMs) são modelos de IA que simulam ou geram ambientes dinâmicos que simulam o mundo real em algum aspecto. Esses modelos são fundamentais para sistemas que possuem um impacto físico no mundo real, como robôs ou veículos autônomos. Para que essas IAs possam operar no mundo físico, elas primeiro precisam de ambientes de treinamento seguros, de forma a aprender como as condições do mundo real atuam na sua área de atuação específica antes de poderem agir de fato no mundo real. Dessa forma, WFMs proporcionam esses ambientes de treinamento, agindo como intermediário importante para o treinamento de modelos de IA com atuação no mundo físico.</p>
-<p>Na construção de WFMs, usamos uma abordagem em duas etapas, de pré-treinamento e pós-treinamento, que equilibra a capacidade de generalização com a especialização. Na primeira fase, o modelo é exposto a uma grande variedade de dados de vídeo, absorvendo padrões do mundo real em larga escala. Isso cria uma base capaz de entender diversos contextos. Depois, refinamos esse conhecimento geral com dados específicos de uma área de atuação, como a robótica ou direção autônoma. Assim, o modelo se adapta às nuances do ambiente real de atuação, sem perder sua versatilidade.</p>
+<p>World Foundation Models (WFMs) são modelos de IA que simulam ou geram ambientes dinâmicos que simulam o mundo real em algum aspecto. Esses modelos são fundamentais para sistemas que possuem um impacto físico no mundo real, como robôs ou veículos autônomos.
+Para que essas IAs possam operar no mundo físico, elas primeiro precisam de ambientes de treinamento seguros, de forma a aprender como as condições do mundo real atuam na sua área de atuação específica antes de poderem agir de fato no mundo real. Dessa forma, WFMs proporcionam esses ambientes de treinamento, agindo como intermediário importante para o treinamento de modelos de IA com atuação no mundo físico.</p>
+<p>Na construção de WFMs, usamos uma abordagem em duas etapas, de pré-treinamento e pós-treinamento, que equilibra a capacidade de generalização com a especialização. Na primeira fase, o modelo é exposto a uma grande variedade de dados de vídeo, absorvendo padrões do mundo real em larga escala.
+Isso cria uma base capaz de entender diversos contextos. Depois, refinamos esse conhecimento geral com dados específicos de uma área de atuação, como a robótica ou direção autônoma. Assim, o modelo se adapta às nuances do ambiente real de atuação, sem perder sua versatilidade.</p>
 <h2 id="wfm-baseado-em-modelo-autoregressivo">WFM baseado em modelo autoregressivo</h2>
-<p>WFMs que utilizam abordagens autoregressivas aplicam os mesmos princípios dos modelos de linguagem à geração de ambientes simulados. Nesta arquitetura, a simulação de mundo é gerada por meio da previsão do próximo token, onde cada frame de vídeo é convertido em uma sequência de tokens que são processados sequencialmente pelo modelo. O caráter autoregressivo vem justamente da previsão dos próximos tokens com base na sequência de frames já vista.</p>
+<p>WFMs que utilizam abordagens autoregressivas aplicam os mesmos princípios dos modelos de linguagem à geração de ambientes simulados.
+Nesta arquitetura, a simulação de mundo é gerada por meio da previsão do próximo token, onde cada frame de vídeo é convertido em uma sequência de tokens que são processados sequencialmente pelo modelo. O caráter autoregressivo vem justamente da previsão dos próximos tokens com base na sequência de frames já vista.</p>
 <p>Esses tokens podem representar pixels, patches visuais (como no Vision Transformer), embeddings de texto, comandos ou ações. O modelo é treinado para prever o próximo token a partir de um contexto acumulado, respeitando a ordem causal dos dados: cada predição é condicionada apenas pelos valores presentes e passados de entrada, mas nunca de valores futuros.</p>
 <p><img alt="Entradas para o WFM" src="../src/WFM_input_imagens_texto.png" /></p>
 <blockquote>
@@ -666,48 +667,71 @@ $$.</p>
 <p><img alt="alt text" src="../src/architecture.png" /></p>
 <p>A arquitetura das WFMs autoregressivas segue três componentes principais:</p>
 <ol>
-<li><strong>Tokenização de Vídeo</strong>:</li>
 <li>
-<p>Os vídeos são inicialmente passados por um tokenizador visual, que transforma cada frame em uma sequência de tokens discretos. Esses tokens são representações compactas dos frames. Nessa arquitetura ele gera um tensor de (8x16x16).</p>
+<p><strong>Tokenização de Vídeo</strong>:</p>
+<ul>
+<li>Os vídeos são inicialmente passados por um tokenizador visual, que transforma cada frame em uma sequência de tokens discretos. Esses tokens são representações compactas dos frames. Nessa arquitetura ele gera um tensor de (8x16x16).</li>
+</ul>
 </li>
 <li>
 <p><strong>Núcleo Autoregressivo</strong>:</p>
+<ul>
+<li>
+<p>O núcleo do modelo é um Transformer decoder, treinado para prever o próximo token com base na sequência anterior (aqui está o caráter autoregressivo). Para lidar com a estrutura tridimensional dos vídeos (tempo, altura e largura), são utilizados embeddings posicionais espaciais e temporais. Ele também pode receber informações adicionais, como instruções em linguagem natural, por meio de mecanismos de atenção cruzada.</p>
 </li>
-<li>O núcleo do modelo é um Transformer decoder, treinado para prever o próximo token com base na sequência anterior (aqui está o caráter autoregressivo). Para lidar com a estrutura tridimensional dos vídeos (tempo, altura e largura), são utilizados embeddings posicionais espaciais e temporais. Ele também pode receber informações adicionais, como instruções em linguagem natural, por meio de mecanismos de atenção cruzada.</li>
-<li><strong>Positional Embedding:</strong>  Modelos baseados em atenção (Transformers) não entendem ordem ou posição por padrão. Para que o modelo processe vídeos (ou qualquer dado sequencial), é essencial dizer onde e quando cada token ocorre.<br />
-   É aqui que entram os positional embeddings, e neste caso, temos dois tipos combinados:<ul>
-<li><strong>Absolute Positional Embedding:</strong>
-     Para cada posição no vídeo, o modelo atribui um vetor fixo. Em seguida esse vetor é somado diretamente ao embedding do token de vocabulário:
-     <span class="arithmatex">\(<span class="arithmatex">\(embedding\_vocabulário + embedding\_posicional = embedding\_final\)</span>\)</span></li>
-<li><strong>3D Rope:</strong> RoPE (Rotary Positional Embedding) é um tipo de embedding que incorpora posição no vetor via rotação trigonométrica, ao invés de somar um vetor fixo. Ao aplicar a rotação trigonométrica no vetor 3D ele é consegue inferir, dimensões relativas entre tokens, direções de movimento, ritmos e padrões espacias e temporais.</li>
+<li>
+<p><strong>Positional Embedding:</strong> Modelos baseados em atenção (Transformers) não entendem ordem ou posição por padrão. Para que o modelo processe vídeos (ou qualquer dado sequencial), é essencial dizer onde e quando cada token ocorre. É aqui que entram os positional embeddings, e neste caso, temos dois tipos combinados:</p>
+<ul>
+<li>
+<p><strong>Absolute Positional Embedding:</strong> Para cada posição no vídeo, o modelo atribui um vetor fixo. Em seguida esse vetor é somado diretamente ao embedding do token de vocabulário:</p>
+</li>
+<li>
+<div class="arithmatex">\[embedding\_vocabulário + embedding\_posicional = embedding\_final\]</div>
+</li>
+<li>
+<p><strong>3D Rope:</strong> RoPE (Rotary Positional Embedding) é um tipo de embedding que incorpora posição no vetor via rotação trigonométrica, ao invés de somar um vetor fixo. Ao aplicar a rotação trigonométrica no vetor 3D ele é consegue inferir, dimensões relativas entre tokens, direções de movimento, ritmos e padrões espacias e temporais.</p>
+</li>
 </ul>
 </li>
-<li><strong>T5 text encoder:</strong> O T5 Text Encoder é a parte codificadora do modelo T5 (Text-to-Text Transfer Transformer), projetado para transformar qualquer tarefa de linguagem natural em uma tarefa de texto para texto. Nesse encoder, o texto de entrada (como um prompt descritivo) é tokenizado e processado por uma pilha de camadas Transformer, gerando uma sequência de vetores contextuais densos que capturam o significado semântico de cada palavra no contexto da frase. Esses embeddings são então usados na cross-attention com os tokens do vídeo, permitindo que o modelo condicione a reconstrução ou geração de vídeo com base no conteúdo textual. O uso do T5 encoder permite que o sistema compreenda comandos em linguagem natural com profundidade semântica, guiando o processamento multimodal de forma flexível e expressiva.</li>
-<li><strong>Cross Attention:</strong> A cross-attention permite que os tokens do vídeo sejam guiados pelos tokens do texto, combinando as duas modalidades de forma inteligente para interpretar ou gerar vídeo com base em linguagem natural.<br />
-   A equação usada tanto no <strong>self-attention</strong> quanto no <strong>cross-attention</strong> é:
-   $$
-   \text{Attention}(Q, K, V) = \text{softmax}\left(\frac{QK^T}{\sqrt{d_k}}\right) V
-   $$</li>
+<li>
+<p><strong>T5 text encoder:</strong> O T5 Text Encoder é a parte codificadora do modelo T5 (Text-to-Text Transfer Transformer), projetado para transformar qualquer tarefa de linguagem natural em uma tarefa de texto para texto.
+Nesse encoder, o texto de entrada (como um prompt descritivo) é tokenizado e processado por uma pilha de camadas Transformer, gerando uma sequência de vetores contextuais densos que capturam o significado semântico de cada palavra no contexto da frase. 
+Esses embeddings são então usados na cross-attention com os tokens do vídeo, permitindo que o modelo condicione a reconstrução ou geração de vídeo com base no conteúdo textual. O uso do T5 encoder permite que o sistema compreenda comandos em linguagem natural com profundidade semântica, guiando o processamento multimodal de forma flexível e expressiva.</p>
+</li>
+<li>
+<p><strong>Cross Attention:</strong> A cross-attention permite que os tokens do vídeo sejam guiados pelos tokens do texto, combinando as duas modalidades de forma inteligente para interpretar ou gerar vídeo com base em linguagem natural.
+  A equação usada tanto no <strong>self-attention</strong> quanto no <strong>cross-attention</strong> é:</p>
+</li>
+<li>
+<div class="arithmatex">\[\text{Attention}(Q, K, V) = \text{softmax}\left(\frac{QK^T}{\sqrt{d_k}}\right) V\]</div>
+</li>
 <li>
 <p>Onde:</p>
 <ul>
-<li>$ Q $ = matriz de <strong>queries</strong>  </li>
-<li>$ K $ = matriz de <strong>keys</strong>  </li>
-<li>$ V $ = matriz de <strong>values</strong>  </li>
-<li>$ d_k $ = dimensão dos vetores de chave (normalizador de escala)  </li>
-<li>$ QK^T $ = produto escalar entre queries e keys  </li>
-<li>$ \text{softmax} $ = transforma os pesos em probabilidades</li>
+<li><span class="arithmatex">\(Q\)</span> = matriz de <strong>queries</strong></li>
+<li><span class="arithmatex">\(K\)</span> = matriz de <strong>keys</strong></li>
+<li><span class="arithmatex">\(V\)</span> = matriz de <strong>values</strong></li>
+<li><span class="arithmatex">\(d_k\)</span> = dimensão dos vetores de chave (normalizador de escala)</li>
+<li><span class="arithmatex">\(QK^T\)</span> = produto escalar entre queries e keys</li>
+<li><span class="arithmatex">\(\text{softmax}\)</span> = transforma os pesos em probabilidades</li>
+</ul>
+</li>
 </ul>
 </li>
 <li>
 <p><strong>Decodificação</strong>:</p>
-</li>
+<ul>
 <li>A geração acontece de forma sequencial, token por token, até que um novo frame seja reconstruído. Há a possibilidade dos tokens gerados serem passados por um decoder de difusão para melhorar a qualidade visual</li>
+</ul>
+</li>
 </ol>
 <h3 id="vantagens-da-abordagem">Vantagens da Abordagem</h3>
-<p>Entre os principais pontos positivos dessa arquitetura está sua <strong>escalabilidade</strong>: por herdar a estrutura dos grandes modelos de linguagem (LLMs), ela se adapta bem ao uso de grandes volumes de dados. Outro aspecto importante é a <strong>flexibilidade</strong>: o modelo pode lidar com diferentes tipos de entrada (texto, vídeo, imagem), gerar sequências de comprimentos variados e ser controlado de maneira precisa por prompts</p>
+<p>Entre os principais pontos positivos dessa arquitetura está sua <strong>escalabilidade</strong>: por herdar a estrutura dos grandes modelos de linguagem (LLMs), ela se adapta bem ao uso de grandes volumes de dados. 
+Outro aspecto importante é a <strong>flexibilidade</strong>: o modelo pode lidar com diferentes tipos de entrada (texto, vídeo, imagem), gerar sequências de comprimentos variados e ser controlado de maneira precisa por prompts</p>
 <h3 id="limitacoes">Limitações</h3>
-<p>Apesar das vantagens, há desafios inerentes à abordagem. A <strong>geração sequencial</strong> faz com que o processo seja naturalmente mais lento e custoso do ponto de vista computacional, principalmente em vídeos longos. Além disso, como cada passo depende do anterior, <strong>pequenos erros tendem a se propagar</strong> e se amplificar ao longo da sequência, o que pode comprometer a coerência do vídeo gerado. Por fim, o processo de tokenização agressiva, necessário para reduzir o custo computacional, pode introduzir <strong>objetos inesperados</strong> que afetam a fidelidade da simulação, motivo pelo qual, muitas vezes, é necessário aplicar um pós-processamento com modelos de difusão.</p>
+<p>Apesar das vantagens, há desafios inerentes à abordagem. A <strong>geração sequencial</strong> faz com que o processo seja naturalmente mais lento e custoso do ponto de vista computacional, principalmente em vídeos longos. 
+Além disso, como cada passo depende do anterior, <strong>pequenos erros tendem a se propagar</strong> e se amplificar ao longo da sequência, o que pode comprometer a coerência do vídeo gerado. 
+Por fim, o processo de tokenização agressiva, necessário para reduzir o custo computacional, pode introduzir <strong>objetos inesperados</strong> que afetam a fidelidade da simulação, motivo pelo qual, muitas vezes, é necessário aplicar um pós-processamento com modelos de difusão.</p>
 
 
 
